--- a/package.json
+++ b/package.json
@@ -20,6 +20,17 @@
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-contrib-imagemin": "~0.4.0",
-    "grunt-contrib-htmlmin": "~0.1.3"
+    "grunt-contrib-htmlmin": "~0.1.3",
+    "grunt-contrib-cssmin": "~0.7.0",
+    "grunt-contrib-jshint": "~0.7.2",
+    "grunt-contrib-sass": "~0.6.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-connect": "~0.5.0",
+    "grunt-autoprefixer": "~0.5.0",
+    "grunt-bower-task": "~0.3.4",
+    "grunt-contrib-copy": "~0.4.1"
+  },
+  "dependencies": {
+    "load-grunt-tasks": "~0.2.0"
   }
 }
